# surfel_next_best_view

surfel_next_best_view/: CMakeLists.txt  LICENSE.txt  README.md  package.xml
surfel_next_best_view/include/surfel_next_best_view/: surfel_next_best_view_render_plugin.h  surfel_renderer.h
surfel_next_best_view/launch/: test.launch
surfel_next_best_view/src/: surfel_next_best_view_node.cpp  surfel_next_best_view_node.h  surfel_renderer.cpp  surfel_test.cpp
surfel_next_best_view/src/shaders/: surfel_fragment_shader.cpp  surfel_fragment_shader.h  surfel_vertex_shader.cpp  surfel_vertex_shader.h
surfel_next_best_view_msgs/: CMakeLists.txt  package.xml
surfel_next_best_view_msgs/action/: EvaluatePoses.action  SetPointCloud.action
surfel_next_best_view_render_robot_urdf_plugin/: CMakeLists.txt  README.md  package.xml  plugin.xml
surfel_next_best_view_render_robot_urdf_plugin/launch/: filter_parameters.yaml  test.launch
surfel_next_best_view_render_robot_urdf_plugin/src/: renderable.cpp  renderable.h  surfel_next_best_view_render_robot_urdf_plugin.cpp  surfel_next_best_view_render_robot_urdf_plugin.h  surfel_test.cpp  urdf_filter.cpp  urdf_filter.h  urdf_renderer.cpp  urdf_renderer.h
surfel_next_best_view_render_robot_urdf_plugin/src/shaders/: surfel_fragment_shader_robot.cpp  surfel_fragment_shader_robot.h  surfel_vertex_shader_robot.cpp  surfel_vertex_shader_robot.h
