<?xml version="1.0"?> 
<package format="2"> 
  <name>surfel_next_best_view</name>
  <version>0.0.0</version>
  <description>The surfel_next_best_view package</description>

  <maintainer email="rimlab@todo.todo">rimlab</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>eigen_conversions</build_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <exec_depend>eigen_conversions</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <build_depend>actionlib</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <build_depend>init_fake_opengl_context</build_depend>
  <build_export_depend>init_fake_opengl_context</build_export_depend>
  <exec_depend>init_fake_opengl_context</exec_depend>
  
  <build_depend>surfel_next_best_view_msgs</build_depend>
  <build_export_depend>surfel_next_best_view_msgs</build_export_depend>
  <exec_depend>surfel_next_best_view_msgs</exec_depend>

</package>
